--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="weui_cells weui_cells_form">
 
                                 <div class="weui_cell">
-                                    <img src="./赵松.jpg" style="max-width:100%;">
+                                    <img src="./zhaosong.jpg" style="max-width:100%;">
                                 </div>
 
 
